--- a/src/components/Timeline/Indicator/styles.css
+++ b/src/components/Timeline/Indicator/styles.css
@@ -2,10 +2,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 200;
+    z-index: 400;
     width: 2px;
     height: 100%;
-    background: red;
+    background: #0066CB;
     /*transition: all 0.5s ease-in-out;*/
     /*transition:left 1s linear;*/
 }
