--- a/src/components/Timeline/Indicator/styles.css
+++ b/src/components/Timeline/Indicator/styles.css
@@ -13,20 +13,47 @@
 .controls {
     position: absolute;
     top: -50px;
-    left: -50px;
+    left: 0px;
     width: 100px;
     height: 50px;
     background: #0066CB;
 }
 
-.in {
+.buttons {
+    width: 36px;
+    margin: 4px auto;
+}
 
+.in {
+    width: 13px;
+    height: 16px;
+    margin-right: 10px;
+    display: inline-block;
+    cursor: pointer;
+    background: url("./images/in.png") no-repeat;
+}
+
+.in.active {
+    background: url("./images/in-active.png") no-repeat;
 }
 
 .out {
+    width: 13px;
+    height: 16px;
+    display: inline-block;
+    cursor: pointer;
+    background: url("./images/out.png") no-repeat;
+}
+.out.active {
+    background: url("./images/out-active.png") no-repeat;
+}
 
+.disabled {
+    opacity: 0.5;
 }
 
 .time {
-
+    color: #FFF;
+    text-align: center;
+    margin: 2px 0;
 }
