--- a/src/components/Timeline/ElementsLayer/ResizableLayerItem/styles.css
+++ b/src/components/Timeline/ElementsLayer/ResizableLayerItem/styles.css
@@ -4,9 +4,7 @@
     position: absolute;
     top: 0;
     z-index: 300;
-    /*background: #0066CB;*/
-    background: white;
-    opacity: 0.7;
-    border: 1px solid white;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: none;
     box-sizing: border-box;
 }
