--- a/src/components/Timeline/ElementsLayer/ResizableLayerItem/styles.css
+++ b/src/components/Timeline/ElementsLayer/ResizableLayerItem/styles.css
@@ -1,10 +1,16 @@
+@import "../../../variables.css";
+
+:root {
+    --item-background: color(var(--brand-primary) a(60%));
+}
+
 .item {
     display: block;
     height: 100%;
     position: absolute;
     top: 0;
     z-index: 300;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: var(--item-background);
     border: none;
     box-sizing: border-box;
 }
