--- a/src/components/Timeline/SlicesLayer/SliceMenu/styles.css
+++ b/src/components/Timeline/SlicesLayer/SliceMenu/styles.css
@@ -7,7 +7,9 @@
 .menu {
     color: #FFF;
     font-size: 16px;
-    padding: 5px;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .menuItem {
@@ -17,4 +19,19 @@
     background-color: var(--menu-item-background);
     border-radius: 3px;
     font-size: 14px;
+}
+
+.top {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    padding: 5px;
+}
+
+.bottom {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    text-align: right;
+    padding: 5px;
 }
