--- a/src/components/Timeline/ElementsLayer/ResizableLayerItem/styles.css
+++ b/src/components/Timeline/ElementsLayer/ResizableLayerItem/styles.css
@@ -1,16 +1,12 @@
 @import "../../../variables.css";
 
-:root {
-    --item-background: color(var(--brand-primary) a(60%));
-}
-
 .item {
     display: block;
     height: 100%;
     position: absolute;
     top: 0;
     z-index: 300;
-    background-color: var(--item-background);
+    background-color: var(--timeline-item-background);
     border: none;
     box-sizing: border-box;
 }
